# untitled-programming-language-project

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: nix-flake-check.yaml
adrs/: 001_testing_strategy.md  002_de_bruijn_indices.md  003_single_arg_lambdas_in_ast.md  XXX_template.md
examples/: let.uplp  shadowing.uplp
examples/fail/: annotated_let_type_mistmatch.uplp  application_with_non_function.uplp  division_by_zero.uplp  function_arg_check_mismatch.uplp  function_arg_type_mismatch.uplp  invalid_token.uplp  type_ascryption_mismatch.uplp  type_mismatch.uplp  unbound_var.uplp  unexpected_eof.uplp  unexpected_token.uplp
examples/pass/: addition.uplp  addition_neg_args.uplp  annotated_let_binding.uplp  app_binds_more_tightly_than_binary_ops.uplp  bool.uplp  bool_false.uplp  bool_true.uplp  calling_a_rec_function_from_a_regular_function.uplp  division.uplp  division_float_args.uplp  fn_app_precedence.uplp  function_with_let_arg.uplp  function_with_let_body.uplp  function_without_arg_type.uplp  if_cond_expr.uplp  if_false.uplp  if_true.uplp  lambda.uplp  lambda_arg_let.uplp  lambda_with_let.uplp  let_nums.uplp  let_unit.uplp  multi_arg.uplp  multi_arg_application.uplp  multiplication.uplp  multiplication_float_args.uplp  nested_lets.uplp  num.uplp  num_neg_float.uplp  num_neg_int.uplp  (+17 more)
src/: ast.rs  env.rs  error.rs  interner.rs  lib.rs  main.rs  parser.lalrpop  scopes.rs  types.rs  values.rs  vm.rs
syntax-explorations/: scratch.uplp
tests/: binary_ops.rs  functions.rs  let_binding.rs  number_literals.rs  parser.rs  types.rs  unit.rs
(+36 files in other folders)
