[package]
name = "untitled-programming-language-project"
description = "A small language for computers & humans"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/matthew-healy/untitled-programming-language-project"

[[bin]]
name = "uplp"
path = "src/bin/uplp.rs"

[lib]

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }

[dev-dependencies]
rand = "0.8.5"