[package]
name = "untitled-programming-language-project"
description = "A small language for computers & humans"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/matthew-healy/untitled-programming-language-project"

[[bin]]
name = "uplp"
path = "src/bin/uplp.rs"

[lib]

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[dev-dependencies]
quickcheck = "1.0.3"
test-generator = "0.3.0"
toml = "0.5.8"
